
== [nng-rs Unreleased] ==

=== Added ===

* Added the `tcp::BoundPort` and `websocket::Protocol` options.
* A new `Error::ConnectionShutdown` variant.

=== Changed ===

* Removed `nonblocking` argument from `Listener::new` as it is ignored in `libnng v1.2`.
* Removed `nonblocking` argument from `ListenerOptions::new` to match `Listener::new`.

=== Deprecated ===

* Deprecated `Socket::listen_async` as it is functionally equivalent to `Socket::listen` and will be removed at some point in the future.
* Deprecated `Socket::into_raw` in favor of the `TryFrom` trait. (#43)

=== Removed ===

=== Fixed ===

=== Security ===

//------------------------------------------------------------------------------
// Past Releases
//------------------------------------------------------------------------------

== [nng-rs v0.5.1] - 2019-12-07 ==

=== Fixed ===

* Made the `RecvFd` and `SendFd` readable instead of writable. (#45)

== [nng-rs v0.5.0] - 2019-06-20 ==

=== Added ===

* The `Socket::try_{send,recv}` and the `Socket::{dial,listen}_async` functions have been added. (#34)
* The `ffi-module` feature is now available, which allows retrieving the underlying nng-sys types. (#33)
* Added a `RawSocket` type that marks that the given socket is in "raw" mode. (#31)
* Added forwarder and reflector devices. (#32)
* The `Message` and `Header` types now implement `Write`.
* The `Message` type received several new functions to make its API similar to that of a `Vec<u8>` or `VecDeque<u8>`.
* Implemented additional common traits on types: (#18, #23)
	** All options: `Clone`, `Copy`, `Debug`, `Display`, `Eq`, `Hash`, `Ord`, `PartialEq`, `PartialOrd`
	** `Aio`: `Eq`, `Hash`, `PartialEq`
	** `Context`: `Eq`, `Hash`, `Ord`, `PartialEq`, `PartialOrd`
	** `Dialer`: `Copy`, `Hash`, `Ord`, `PartialOrd`
	** `Error`: `Hash`
	** `Header`: `Default`
	** `Listener`: `Copy`, `Hash`, `Ord`, `PartialOrd`
	** `Message`: `Default`, `FromIterator` for both values and references of `u8`