@@ -177,9 +177,9 @@ pub use crate::{
 	aio::{Aio, AioResult},
 	ctx::Context,
 	device::{forwarder, reflector},
-	dialer::{Dialer, DialerOptions},
+	dialer::{Dialer, DialerBuilder},
 	error::{Error, Result},
-	listener::{Listener, ListenerOptions},
+	listener::{Listener, ListenerBuilder},
 	message::{Header, Message},
 	pipe::{Pipe, PipeEvent},
 	protocol::Protocol,
